<resources>
    <string name="workout_summary_title">Workout complete</string>
    <string name="workout_summary_quick_workout_fallback">Quick workout</string>
    <string name="workout_summary_not_found">Workout not found</string>
    <string name="workout_summary_duration_label">Duration</string>
    <string name="workout_summary_volume_label">Volume</string>
    <string name="workout_summary_sets_label">Sets</string>
    <string name="workout_summary_records_header">Personal records</string>
    <string name="workout_summary_saved_as_routine">Saved as routine \"%1$s\".</string>
    <string name="workout_summary_save_as_routine_action">Save as routine</string>
    <string name="workout_summary_done_button">Done</string>
    <string name="workout_summary_save_as_routine_dialog_text">Creates a new routine from this session\'s strength exercises.</string>
    <string name="workout_summary_routine_name_label">Routine name</string>
    <string name="workout_summary_save_button">Save</string>
    <string name="workout_summary_cancel_button">Cancel</string>
    <string name="workout_summary_weight_value_label">%1$s %2$s</string>
</resources>
